fabric/testdata/out/ing_spp-product-search-spilo-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"1008b3b0-df8e-11e9-b4f9-021ccb7ebc56","deployment-id":"d-5hzopy8pcoq3eyeuzjimvncnd","pipeline-id":"l-hm6diyu6r83qkb7phpzcao5cz"},"name":"spp-product-search-spilo-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-spilo.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-spilo","servicePort":"http"},"pathType":"ImplementationS [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2019-09-25T12:14:45Z"
  generation: 1
  labels:
    controller-uid: 1008b3b0-df8e-11e9-b4f9-021ccb7ebc56
    deployment-id: d-5hzopy8pcoq3eyeuzjimvncnd
    pipeline-id: l-hm6diyu6r83qkb7phpzcao5cz
  name: spp-product-search-spilo-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-spilo
    uid: 1008b3b0-df8e-11e9-b4f9-021ccb7ebc56
  resourceVersion: "1357490020"
  uid: 1016b2a5-df8e-11e9-b86e-06b776ba507c
spec:
  rules:
  - host: spp-product-search-spilo.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-spilo
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-spilo-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-spilo
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
